--- a/package.json
+++ b/package.json
@@ -18,5 +18,6 @@
   "homepage": "https://github.com/mariegilbert/whataretheodds#readme",
   "devDependencies": {
     "jest": "^22.4.3"
-  }
+  },
+  "dependencies": {}
 }
